# Hands-on-ZK

./: Cargo.toml
src/: generate_points.rs  main.rs
